maze.lessons.maze.island.IslandMaze.scala.error
Escaper:5: error: not found: value NORTH
    setDirection(NORTH)
                 ^